--- a/.htaccess
+++ b/.htaccess
@@ -32,11 +32,11 @@ RewriteRule ^san-pham/(.*)$ index.php?mod=product&task=list&f=$1 [L]
 RewriteRule ^gioi-thieu/(.*)-([0-9]+).html$ index.php?mod=about&task=detail&link=$1&id=$2 [L]
 # gioi thieu
 RewriteRule ^gioi-thieu/$ index.php?mod=about&task=list [L]
+
 # video
 RewriteRule ^videos/trang-([0-9]+)/$ index.php?mod=video&task=list&page=$1 [L]
 RewriteRule ^videos/$ index.php?mod=news&task=list [L]
-Rewrit
-
+RewriteRule ^videos/(.*)-([0-9]+).html$ index.php?mod=video&task=detail&id=$2 [L]
 # dich vu chi tiet
 RewriteRule ^dich-vu/(.*)-([0-9]+).html$ index.php?mod=news&task=detail&link=$1&nid=$2 [L]
 # dich vu
@@ -59,5 +59,3 @@ RewriteRule ^(.*)-([0-9]+)/(.*)$ index.php?mod=product&task=list&cate=$1&id=$2&f
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)-([0-9]+)/$ index.php?mod=product&task=list&cate=$1&id=$2 [L]
-
-eRule ^videos/(.*)-([0-9]+).html$ index.php?mod=video&task=detail&id=$2 [L]
